# TalentAIQ

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  setup.py
talentaiq/: __init__.py  assessment.py  cli.py  collectors.py  core.py  redaction.py  renderers.py
tests/: test_talentaiq.py
